--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  background-color: #ECE3EC;
+  background-color: #ece3ec;
 }
 
 :root {
@@ -49,7 +49,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -66,7 +66,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
