--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   background-color: #ece3ec;
 }
 
@@ -19,6 +20,7 @@ body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  width: 100%;
 
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
