--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  background-color: #ece3ec;
+  @apply bg-theme_light_1;
 }
 
 :root {
