made google autocomplete longer

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,6 +46,18 @@ h1 {
   line-height: 1.1;
 }
 
+.pac-target-input#searchOrigin,
+.pac-target-input#searchDest {
+  width: 300px !important;
+}
+
+@media (max-width: 1248px) {
+  .pac-target-input#searchOrigin,
+  .pac-target-input#searchDest {
+    width: 100% !important; /* Adjust for smaller screens */
+  }
+}
+
 .pac-container {
   border-radius: 6px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
